# SMA

./: readme.md
docs/: a.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cliGameDisplay.cpp  cmake_install.cmake  gameDisplay.hpp  gamespace.cpp  gamespace.hpp  main.cpp  nomnomGame  position.hpp  predator.hpp  prey.cpp
src/backend/: CMakeLists.txt  agent.cpp  agent.hpp  gamespace.cpp  gamespace.hpp  nomnomGame  predator.cpp  prey.hpp  randomGen.cpp  randomGen.hpp
src/backend/agents/: CMakeLists.txt  agent.cpp  agent.hpp  predator.cpp  predator.hpp  prey.cpp  prey.hpp
src/backend/solvers/: CMakeLists.txt  predatorSolver.cpp  predatorSolver.hpp  preySolver.cpp  preySolver.hpp  solver.cpp  solver.hpp
src/ui/: CMakeLists.txt  cliGameDisplay.cpp  cliGameDisplay.hpp
